ADIN1320_LoopbackFrameGen - added loopbackframegen model, view and viewmodel - added device status for loopbackframegen - relocated onpropertychange for masterslave - added ADIN1320Model to temporarily use ADIN1300FirmwareAPI - updated adin1300model to accept phyaddress - added adin1320 to acceptable devices and board type - added styles at textblockstyle and whitetheme - added loopbackframegen tab to operationsview - updated operations view and viewmodel to set specific tabs for each boards - temporarily modified executeframechecker and resetframechecker commands for sample

--- a/ADIN.WPF/Themes/WhiteTheme.xaml
+++ b/ADIN.WPF/Themes/WhiteTheme.xaml
@@ -53,6 +53,12 @@
     <SolidColorBrush x:Key="Button.IsChecked.Background" Color="{StaticResource DarkerGray}"/>
     <SolidColorBrush x:Key="Button.IsChecked.Foreground" Color="{StaticResource JohsonColor}"/>
     <SolidColorBrush x:Key="Button.IsChecked.BorderBrush" Color="White"/>
+    
+    <!--TextBlock Colors-->
+    <SolidColorBrush x:Key="TextBlock.IsEnable.Foreground" Color="{StaticResource DarkerGray}"/>
+    
+    <!--TextBox Colors-->
+    <SolidColorBrush x:Key="TextBox.IsEnable.Foreground" Color="{StaticResource DarkerGray}"/>
 
 
     <!--Harmonics Colors-->
