--- a/ADIN.WPF/Themes/TextBlockStyle.xaml
+++ b/ADIN.WPF/Themes/TextBlockStyle.xaml
@@ -38,8 +38,13 @@
         <Setter Property="FontSize" Value="14px"/>
         <Setter Property="FontFamily" Value="Barlow"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="{StaticResource TextBlock.IsEnable.Foreground}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
-
+    
     <Style x:Key="DeviceStatusTextBlockstyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockstyle}">
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Foreground" Value="{StaticResource hmc.color.content.default}"/>
@@ -138,6 +143,12 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="{StaticResource TextBox.IsEnable.Foreground}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style TargetType="{x:Type ListBox}">
