--- a/ADIN.WPF/View/RegisterListingView.xaml
+++ b/ADIN.WPF/View/RegisterListingView.xaml
@@ -63,16 +63,20 @@
                 </customStyle:ValueCellStyle>
                 <DataTemplate x:Key="RDetailsTemplate">
                     <telerik:RadGridView x:Name="gvFields" ItemsSource="{Binding BitFields,Mode=TwoWay}"
-                                         AutoGenerateColumns="False" RowIndicatorVisibility="Collapsed" CanUserSortColumns="True" ShowGroupPanel="False" 
-                                         IsReadOnly="True" GroupRenderMode="Flat">
+                                         AutoGenerateColumns="False" RowIndicatorVisibility="Collapsed" CanUserSortColumns="True" ShowGroupPanel="False" BeginningEdit='RadGridView_BeginningEdit' CellEditEnded='RadGridView_CellEditEnded' CellValidating='RadGridView_CellValidating' 
+                                            PreparedCellForEdit='RadGridView_PreparedCellForEdit'
+                                         IsReadOnly="False" GroupRenderMode="Flat">
+                        
+                        
+                        
                         <!--<i:Interaction.Triggers>
                             <i:EventTrigger EventName="CellEditEnding">
                                 <i:InvokeCommandAction Command="{Binding Path=DataContext.SaveRegisterDataCommand, RelativeSource= {RelativeSource FindAncestor, AncestorType={x:Type telerik:RadGridView}}}" />
                             </i:EventTrigger>
                         </i:Interaction.Triggers>-->
-                        <telerik:EventToCommandBehavior.EventBindings>
+                        <!--<telerik:EventToCommandBehavior.EventBindings>
                             <telerik:EventBinding EventName="CellEditEnded" Command="{Binding SaveRegisterDataCommand}" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=telerik:RadGridView}}" />
-                        </telerik:EventToCommandBehavior.EventBindings>
+                        </telerik:EventToCommandBehavior.EventBindings>-->
                         <telerik:StyleManager.Theme>
                             <telerik:Windows7Theme />
                         </telerik:StyleManager.Theme>
@@ -97,10 +101,12 @@
             <telerik:RadGridView x:Name="gvRegister" ItemsSource="{Binding Registers}" SelectedItem="{Binding SelectedRegister}" RowDetailsTemplate="{StaticResource RDetailsTemplate}"
                              AutoGenerateColumns="False" RowIndicatorVisibility="Collapsed"
                              Width="Auto" ScrollViewer.CanContentScroll="True"
-                             ShowGroupPanel="False" IsReadOnly="True" FontFamily="Barlow" GroupRenderMode="Flat">
-                <telerik:EventToCommandBehavior.EventBindings>
+                             SelectionChanged='RadGridView_RegisterSelectionChanged' BeginningEdit='RadGridView_BeginningEdit'
+                             CellEditEnded='RadGridView_CellEditEnded' CellValidating='RadGridView_CellValidating'
+                             ShowGroupPanel="False" PreparedCellForEdit='RadGridView_PreparedCellForEdit'  IsReadOnly="False" FontFamily="Barlow" GroupRenderMode="Flat" DataLoading="gvRegisters_DataLoading">
+                <!--<telerik:EventToCommandBehavior.EventBindings>
                     <telerik:EventBinding EventName="CellEditEnded" Command="{Binding SaveRegisterDataCommand}" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=telerik:RadGridView}}" />
-                </telerik:EventToCommandBehavior.EventBindings>
+                </telerik:EventToCommandBehavior.EventBindings>-->
                 <!--<telerik:RadGridView.InputBindings>
                     <KeyBinding Key="Enter" Command="{Binding SaveDataCommand}" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=telerik:RadGridView}}" />
                 </telerik:RadGridView.InputBindings>-->
