--- a/Avalonia/ADIN.Avalonia/Views/MainWindow.axaml
+++ b/Avalonia/ADIN.Avalonia/Views/MainWindow.axaml
@@ -3,19 +3,64 @@
         xmlns:vm="using:ADIN.Avalonia.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		xmlns:view="using:ADIN.Avalonia.Views"
+        mc:Ignorable="d" d:DesignHeight="1800" d:DesignWidth="1300"
+		MinWidth="1410"
+		MinHeight="870"
         x:Class="ADIN.Avalonia.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="ADIN.Avalonia">
+        Title="ADIN.Avalonia"
+        SystemDecorations="{OnPlatform BorderOnly, Linux=Full}">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
+		<vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <!--<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>-->
-	<TextBlock Classes="title l" Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<Grid RowDefinitions="Auto,7*,2*">
+
+		<HmcNavigationBar Grid.Row="0" Size="sm" AppName="ADIN Ethernet Phy" ReplaceAppBar="True">
+			<HmcNavigationLink Size="sm" HasIcon="False" Content="Link Properties" Command="{Binding NavigateLinkPropertiesCommand}"/>
+			<HmcNavigationLink Size="sm" HasIcon="False" Content="Loopback &amp; Frame Generator" Command="{Binding NavigateLoopbackFrameGenCommand}"/>
+			<HmcNavigationLink Size="sm" HasIcon="False" Content="Register Access" Command="{Binding NavigateRegisterAccessCommand}"/>
+		</HmcNavigationBar>
+
+		<Grid Grid.Row="1" ColumnDefinitions="210,6*,5*">
+			<ContentControl Grid.Column="0" Background="White">
+				<Border>
+					<StackPanel>
+						<view:DeviceListingView/>
+						<view:ExtraCommandsView/>
+					</StackPanel>
+				</Border>
+			</ContentControl>
+			<ContentControl Grid.Column="1" Content="{Binding CurrentViewModel, Mode=TwoWay}">
+				<ContentControl.DataTemplates>
+					<DataTemplate DataType="{x:Type vm:LinkPropertiesViewModel}">
+						<view:LinkPropertiesView/>
+					</DataTemplate>
+					<DataTemplate DataType="{x:Type vm:LoopbackFrameGenViewModel}">
+						<view:LoopbackFrameGenView/>
+					</DataTemplate>
+					<DataTemplate DataType="{x:Type vm:RegisterAccessViewModel}">
+						<view:RegisterAccessView/>
+					</DataTemplate>
+				</ContentControl.DataTemplates>
+			</ContentControl>
+			<ContentControl Grid.Column="2">
+				<StackPanel>
+					<view:DeviceStatusView/>
+				</StackPanel>
+			</ContentControl>
+		</Grid>
+
+		<Grid Grid.Row="2" ColumnDefinitions="5,350,5,*,5">
+			<view:RegisterReadWriteView Grid.Column="1"/>
+			<view:LogActivityView Grid.Column="3"/>
+		</Grid>
+		
+	</Grid>
 
 </Window>
