--- a/Avalonia/ADIN.Avalonia/Views/FrameStatusView.axaml
+++ b/Avalonia/ADIN.Avalonia/Views/FrameStatusView.axaml
@@ -38,14 +38,6 @@
 				<TextBlock Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Text="Generator Status" Classes="body xs"/>
 			</Grid>
 		</HmcCard>
-		<HmcCard Density="High" Header="Mean-Square Error" Margin="8" IsVisible="False">
-			<Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto,Auto">
-				<TextBlock Grid.Column="0" Grid.Row="0" Text="10 (25)" Classes="subtitle l"/>
-				<TextBlock Grid.Column="0" Grid.Row="1" Text="Error (Max)" Classes="body xs"/>
-				<TextBlock Grid.Column="1" Grid.Row="0" Text="5 dB" Classes="subtitle l"/>
-				<TextBlock Grid.Column="1" Grid.Row="1" Text="SNR" Classes="body xs"/>
-			</Grid>
-		</HmcCard>
 		<HmcCard Density="High" Header="Mean-Square Error" Margin="8" IsVisible="True">
 			<Grid ColumnDefinitions="*,*,*,*" RowDefinitions="Auto,Auto,24,Auto,Auto">
 				<TextBlock Grid.Column="0" Grid.Row="0" Text="10 (25)" Classes="subtitle m"/>
@@ -64,6 +56,14 @@
 				<TextBlock Grid.Column="3" Grid.Row="1" Text="D - Error (Max)" Classes="body xs"/>
 				<TextBlock Grid.Column="3" Grid.Row="3" Text="5 dB" Classes="subtitle m"/>
 				<TextBlock Grid.Column="3" Grid.Row="4" Text="D - SNR" Classes="body xs"/>
+			</Grid>
+		</HmcCard>
+		<HmcCard Density="High" Header="Mean-Square Error" Margin="8" IsVisible="True">
+			<Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto,Auto">
+				<TextBlock Grid.Column="0" Grid.Row="0" Text="10 (25)" Classes="subtitle l"/>
+				<TextBlock Grid.Column="0" Grid.Row="1" Text="Error (Max)" Classes="body xs"/>
+				<TextBlock Grid.Column="1" Grid.Row="0" Text="5 dB" Classes="subtitle l"/>
+				<TextBlock Grid.Column="1" Grid.Row="1" Text="SNR" Classes="body xs"/>
 			</Grid>
 		</HmcCard>
 	</StackPanel>
