Avalonia_Implementation: - implemented device status without local/remote speeds - implemented frame generator control - started extra commands viewmodel

--- a/Avalonia/ADIN.Avalonia/Views/DeviceStatusView.axaml
+++ b/Avalonia/ADIN.Avalonia/Views/DeviceStatusView.axaml
@@ -3,27 +3,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="540" d:DesignHeight="800"
-             x:Class="ADIN.Avalonia.Views.DeviceStatusView">
+             x:Class="ADIN.Avalonia.Views.DeviceStatusView"
+			 x:CompileBindings="False">
 	<StackPanel Margin="8">
 		<Grid ColumnDefinitions="*,*">
 			<HmcCard Grid.Column="0" Density="High" Margin="8">
 				<HmcCard.Header>
-					<HmcContainerHeader Heading="EVAL-ADIN1320" Subtitle="DQ93SFEB" Density="Medium"/>
+					<HmcContainerHeader Heading="{Binding BoardName}" Subtitle="{Binding SerialNumber}" Density="Medium"/>
 				</HmcCard.Header>
 				<Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto,24,Auto,Auto">
-					<TextBlock Grid.Column="0" Grid.Row="0" Text="ADIN1320" Classes="subtitle m"/>
+					<TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding DeviceType}" Classes="subtitle m"/>
 					<TextBlock Grid.Column="0" Grid.Row="1" Text="Device Type" Classes="body xs"/>
-					<TextBlock Grid.Column="1" Grid.Row="0" Text="0" Classes="subtitle m"/>
+					<TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding PhyAddress}" Classes="subtitle m"/>
 					<TextBlock Grid.Column="1" Grid.Row="1" Text="Phy Address" Classes="body xs"/>
-					<TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Text="Software Powerdown" Classes="subtitle m"/>
-					<TextBlock Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Text="Device Type" Classes="body xs"/>
+					<TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Text="{Binding LinkStatus}" Classes="subtitle m"/>
+					<TextBlock Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Text="Link Status" Classes="body xs"/>
 				</Grid>
 			</HmcCard>
 			<HmcCard Grid.Column="1" Density="High" Header="Speed" Margin="8">
 				<Grid RowDefinitions="Auto,Auto,24,Auto,Auto">
-					<TextBlock Grid.Row="0" Text="Advertised" Classes="subtitle m"/>
+					<TextBlock Grid.Row="0" Text="{Binding SpeedMode}" Classes="subtitle m"/>
 					<TextBlock Grid.Row="1" Text="Speed Mode" Classes="body xs"/>
-					<TextBlock Grid.Row="3" Text="SPEED_1000BASE_T_FD" Classes="subtitle m"/>
+					<TextBlock Grid.Row="3" Text="{Binding AdvertisedSpeed}" Classes="subtitle m"/>
 					<TextBlock Grid.Row="4" Text="Advertised Speed" Classes="body xs"/>
 				</Grid>
 			</HmcCard>
