--- a/Avalonia/ADIN.Avalonia/Views/FrameStatusView.axaml
+++ b/Avalonia/ADIN.Avalonia/Views/FrameStatusView.axaml
@@ -20,12 +20,24 @@
 					<TextBlock Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Text="Link Status" Classes="body xs"/>
 				</Grid>
 			</HmcCard>
-			<HmcCard Grid.Column="1" Density="High" Header="Speed" Margin="8">
+			<HmcCard Grid.Column="1" Density="High" Header="Speed" Margin="8" IsVisible="{Binding IsCopperMedia}">
 				<Grid RowDefinitions="Auto,Auto,24,Auto,Auto">
 					<TextBlock Grid.Row="0" Text="{Binding SpeedMode}" Classes="subtitle m"/>
 					<TextBlock Grid.Row="1" Text="Speed Mode" Classes="body xs"/>
 					<TextBlock Grid.Row="3" Text="{Binding AdvertisedSpeed}" Classes="subtitle m"/>
 					<TextBlock Grid.Row="4" Text="Advertised Speed" Classes="body xs"/>
+				</Grid>
+			</HmcCard>
+			<HmcCard Grid.Column="1" Density="High" Header="Speed" Margin="8" IsVisible="{Binding IsFiberMedia}">
+				<Grid RowDefinitions="Auto,Auto">
+					<TextBlock Grid.Row="0" Text="1000BASE-LX/SX HD&amp;FD" Classes="subtitle m"/>
+					<TextBlock Grid.Row="1" Text="Fiber Speed" Classes="body xs"/>
+				</Grid>
+			</HmcCard>
+			<HmcCard Grid.Column="1" Density="High" Header="Speed" Margin="8" IsVisible="{Binding IsMediaConverter}">
+				<Grid RowDefinitions="Auto,Auto">
+					<TextBlock Grid.Row="0" Text="1000 BASE" Classes="subtitle xl"/>
+					<TextBlock Grid.Row="1" Text="Media Converter Speed" Classes="body xs"/>
 				</Grid>
 			</HmcCard>
 		</Grid>
