--- a/Avalonia/ADIN.Avalonia/Views/MainWindow.axaml
+++ b/Avalonia/ADIN.Avalonia/Views/MainWindow.axaml
@@ -26,8 +26,8 @@
 		<DataTemplate DataType="{x:Type vm:LoopbackFrameGenViewModel}">
 			<view:LoopbackFrameGenView/>
 		</DataTemplate>
-		<DataTemplate DataType="{x:Type vm:RegisterAccessViewModel}">
-			<view:RegisterAccessView/>
+		<DataTemplate DataType="{x:Type vm:RegisterListingViewModel}">
+			<view:RegisterListingView/>
 		</DataTemplate>
 	</ContentControl.DataTemplates>
 
